updated css and fixed some alignment issues

--- a/week-3/hingtgen-temp-conversion.css
+++ b/week-3/hingtgen-temp-conversion.css
@@ -19,16 +19,24 @@ body {
   padding: 10px;
 
 }
+.form {
+  display: inline-grid;
+  grid-template-columns: auto;
+  padding: 10px;
+}
+
 
 #form-temp {
   width: 600px;
   margin: 3% auto 0;
+
 }
 
 #form-results {
   width: 600px;
   margin: 3% auto 0;
   text-align: center;
+  
 }
 
 .app-header {
@@ -36,9 +44,12 @@ body {
 }
   
 .card {
-    box-shadow: 0 8px  16px rgba(0, 0, 0, .2);
-    width: 600px;
-    margin: 3% auto 0;
+  box-shadow: 0 8px  16px rgba(0, 0, 0, .2);
+  width: 600px;
+  margin: 3% auto 0;
+  display: inline-grid;
+  grid-template-columns: auto;
+  padding: 10px;
 }
 
 .card-title {
@@ -49,11 +60,24 @@ body {
 
 .btn {
   color: white;
-    background-color: #4F3674;
-    text-align: center;
+  background-color: #4F3674;
+  text-align: center;
+  padding: 10px;
+  text-decoration: none;
+  border: none;
+  border-radius: 6px;
 }
 
+.full-width {
+  width: 100%;
+}
 
-.card-content {
-  margin-left: 10%;
+.btn-primary:hover {
+  background-color: #d6a800;
+  color: #4F3674;
+}
+
+.return-home {
+  float: left;
+  
 }
